--- a/charts/konnectivity/templates/certs.yaml.tmpl
+++ b/charts/konnectivity/templates/certs.yaml.tmpl
@@ -1,8 +1,13 @@
 {{- $baseName         := include "konnectivity.name" . -}}
 {{- $commonLabels     := include "konnectivity.labels" . -}}
 {{- $currentNamespace := .Release.Namespace -}}
+{{- $konnectivityServiceName := "kube-apiserver-svc" }}
 
-{{- $serviceKonnectivityServerLb  := (lookup "v1" "Service" $currentNamespace "konnectivity-server-svc") }}
+{{- if .Values.applications.konnectivityServer.enable }}
+{{- $konnectivityServiceName = "konnectivity-server-svc" }}
+{{- end }}
+
+{{- $serviceKonnectivityServerLb  := (lookup "v1" "Service" $currentNamespace $konnectivityServiceName) }}
 {{- $serviceKonnectivityServerIP  := $serviceKonnectivityServerLb.status.loadBalancer.ingress }}
 
 
@@ -51,6 +56,7 @@ spec:
   {{- end }}
 
   ipAddresses:
+
   {{- range $serviceKonnectivityServerIP }}
     - "{{ .ip }}"
   {{- end }}
