--- a/charts/kube-apiserver/templates/configMaps.yaml.tmpl
+++ b/charts/kube-apiserver/templates/configMaps.yaml.tmpl
@@ -1,3 +1,8 @@
+
+{{- $baseName                 := include "kube-apiserver.name" . -}}
+{{- $selectorLabels           := include "kube-apiserver.selectorLabels" . -}}
+{{- $commonLabels             := include "kube-apiserver.labels" . -}}
+{{- $currentNamespace         := .Release.Namespace -}}
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -8,6 +13,17 @@ data:
     apiVersion: apiserver.k8s.io/v1beta1
     kind: EgressSelectorConfiguration
     egressSelections:
+    {{- with $.Values.applications.konnectivityServer }}
+      {{- if .enable }}
+          {{- if eq (default "http-connect" .mode)  "GRPC" }}
+    - name: cluster
+      connection:
+        proxyProtocol: GRPC
+        transport:
+          uds:
+            udsName: /etc/kubernetes/konnectivity-server/konnectivity-server.socket
+          {{- end }}
+          {{- if eq (default "http-connect" .mode)  "http-connect" }}
     - name: cluster
       connection:
         proxyProtocol: HTTPConnect
@@ -18,6 +34,10 @@ data:
               caBundle: /pki/konnectivity-client/ca.crt
               clientKey: /pki/konnectivity-client/tls.key
               clientCert: /pki/konnectivity-client/tls.crt
+          {{- end }}
+        {{- end }}
+      {{- end }}
+
     - name: master
       connection:
         proxyProtocol: Direct
